--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "lint": "ts-standard"
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
@@ -29,13 +29,8 @@
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.11",
     "ts-standard": "^12.0.2"
-  },
-  "eslintConfig": {
-    "extends": [
-      "next",
-      "next/core-web-vitals"
-    ]
   },
   "engines": {
     "node": ">=20.12.0"
