--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ts-standard": "^12.0.2"
   },
   "engines": {
-    "node": ">=20.12.0"
+    "node": "20.12.0"
   },
   "pnpm": {
     "overrides": {
