--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "18.3.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.11",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "ts-standard": "^12.0.2"
   },
   "engines": {
